@@ -4,7 +4,7 @@
 
 Estimated hours of work so far | Horas estimadas de trabajo hasta el momento: 
 
-* **297 hours**
+* **302 hours**
 
 ##ENGLISH
 
@@ -21,6 +21,11 @@ Estimated hours of work so far | Horas estimadas de trabajo hasta el momento:
 ![piKiss_05](http://misapuntesde.com/images/piKiss_05.png)
 
 ###[ ChangeLog (dd/mm/yy)]
+
+####(27/06/14)
+
+· Added Internet > Epiphany Web Browser
+· Added Emulators > Gameboy Advance + ROM (Watman), PCE-CD + ROM (Reflectron)
 
 ####(26/06/14)
 
