@@ -2,10 +2,12 @@
 #
 # Description : Install XBMC
 # Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
-# Version     : 0.8 (15/May/14)
+# Version     : 0.9 (26/Jun/14)
 #
-# TODO	      · Ask user if want to start XBMC from boot.
-#	      · Get the latest version
+# HELP        · http://michael.gorven.za.net/raspberrypi/xbmc
+#
+# TODO	      [ ] Ask user if want to start XBMC from boot.
+#	          [V] Get the latest version
 #
 clear
 
@@ -14,4 +16,8 @@ echo "deb http://archive.mene.za.net/raspbian wheezy contrib" | sudo tee -a /etc
 sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key 5243CDED
 sudo apt-get update
 sudo apt-get install -y xbmc
-read -p "Done!. Type xbmc to run. Press [Enter] to continue..."
+
+usermod -a -G "audio,video,input,dialout,plugdev,tty" $USER
+addgroup --system input
+
+read -p "Done!. Type  xbmc-standalone to run. Press [Enter] to continue..."
