@@ -1,3 +1,9 @@
+(27/06/14)
+==========
+
+· Added Internet > Epiphany Web Browser
+· Added Emulators > Gameboy Advance + ROM (Watman), PCEngine + ROM (Reflectron)
+
 (26/06/14)
 ==========
 
